Add population of studieinfo data endpoint
